--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
   <link rel="shortcut icon" href="assets/images/icono-121x121.png" type="image/x-icon">
   <meta name="description" content="">
   
-  
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FKEGRS88MQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FKEGRS88MQ');
+</script>
+
   <title>Home</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
