arreglo de vistas

--- a/pedido.html
+++ b/pedido.html
@@ -219,8 +219,6 @@
 <section data-bs-version="5.1" class="gallery5 mbr-gallery cid-sO63YnnHmu" id="gallery5-1c">
     
 
-    
-
     <div class="container">
         <div class="mbr-section-head">
             <h3 class="mbr-section-title mbr-fonts-style align-center m-0 display-2"><strong>Bebidas</strong></h3>
@@ -228,8 +226,8 @@
         </div>
         <div class="row mbr-gallery mt-4">
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#sO69kyUBjR-modal" data-bs-target="#sO69kyUBjR-modal">
-                    <img class="w-100" src="assets/images/calipis-506x506.jpg" alt="" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-sO69kyUBjR" data-bs-target="#lb-sO69kyUBjR">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#sO6qsEdkfo-modal" data-bs-target="#sO6qsEdkfo-modal">
+                    <img class="w-100" src="assets/images/calipis-506x506.jpg" alt="" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-sO6qsEdkfo" data-bs-target="#lb-sO6qsEdkfo">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -237,8 +235,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7">Soda Calipis</h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#sO69kyUBjR-modal" data-bs-target="#sO69kyUBjR-modal">
-                    <img class="w-100" src="assets/images/cclemon-400x400.png" alt="" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-sO69kyUBjR" data-bs-target="#lb-sO69kyUBjR">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#sO6qsEdkfo-modal" data-bs-target="#sO6qsEdkfo-modal">
+                    <img class="w-100" src="assets/images/cclemon-400x400.png" alt="" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-sO6qsEdkfo" data-bs-target="#lb-sO6qsEdkfo">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -246,8 +244,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7">CC Lemon</h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#sO69kyUBjR-modal" data-bs-target="#sO69kyUBjR-modal">
-                    <img class="w-100" src="assets/images/qoo-506x506.jpg" alt="" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-sO69kyUBjR" data-bs-target="#lb-sO69kyUBjR">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#sO6qsEdkfo-modal" data-bs-target="#sO6qsEdkfo-modal">
+                    <img class="w-100" src="assets/images/qoo-506x506.jpg" alt="" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-sO6qsEdkfo" data-bs-target="#lb-sO6qsEdkfo">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -255,8 +253,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7">QOO</h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#sO69kyUBjR-modal" data-bs-target="#sO69kyUBjR-modal">
-                    <img class="w-100" src="assets/images/ramune-506x506.jpg" alt="" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-sO69kyUBjR" data-bs-target="#lb-sO69kyUBjR">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#sO6qsEdkfo-modal" data-bs-target="#sO6qsEdkfo-modal">
+                    <img class="w-100" src="assets/images/ramune-506x506.jpg" alt="" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-sO6qsEdkfo" data-bs-target="#lb-sO6qsEdkfo">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -265,11 +263,11 @@
             </div>
         </div>
 
-        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="sO69kyUBjR-modal">
+        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="sO6qsEdkfo-modal">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <div class="carousel slide" id="lb-sO69kyUBjR" data-interval="5000" data-bs-interval="5000">
+                        <div class="carousel slide" id="lb-sO6qsEdkfo" data-interval="5000" data-bs-interval="5000">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="d-block w-100" src="assets/images/calipis-506x506.jpg" alt="">
@@ -285,18 +283,18 @@
                                 </div>
                             </div>
                             <ol class="carousel-indicators">
-                                <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#lb-sO69kyUBjR" data-bs-target="#lb-sO69kyUBjR"></li>
-                                <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-sO69kyUBjR" data-bs-target="#lb-sO69kyUBjR"></li>
-                                <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-sO69kyUBjR" data-bs-target="#lb-sO69kyUBjR"></li>
-                                <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-sO69kyUBjR" data-bs-target="#lb-sO69kyUBjR"></li>
+                                <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#lb-sO6qsEdkfo" data-bs-target="#lb-sO6qsEdkfo"></li>
+                                <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-sO6qsEdkfo" data-bs-target="#lb-sO6qsEdkfo"></li>
+                                <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-sO6qsEdkfo" data-bs-target="#lb-sO6qsEdkfo"></li>
+                                <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-sO6qsEdkfo" data-bs-target="#lb-sO6qsEdkfo"></li>
                             </ol>
                             <a role="button" href="" class="close" data-dismiss="modal" data-bs-dismiss="modal" aria-label="Close">
                             </a>
-                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" data-bs-slide="prev" href="#lb-sO69kyUBjR">
+                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" data-bs-slide="prev" href="#lb-sO6qsEdkfo">
                                 <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                                 <span class="sr-only visually-hidden">Previous</span>
                             </a>
-                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" data-bs-slide="next" href="#lb-sO69kyUBjR">
+                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" data-bs-slide="next" href="#lb-sO6qsEdkfo">
                                 <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                                 <span class="sr-only visually-hidden">Next</span>
                             </a>
