Arreglo formulario pedido

--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
                         <strong>Sushi</strong></h3>
                     <p class="mbr-text mbr-fonts-style display-7">
                         Use Mobirise website building software to create multiple sites for commercial and non-profit projects. Click on the image in this block to replace it. You can add a description below your image, or on the side. If you want to hide some of the text fields, open the Block parameters, and uncheck relevant options.</p>
-                </div>
+                        <div class="mbr-section-btn item-footer mt-2"><a href="pedido.html#top" class="btn btn-primary item-btn display-7">Ver Más Productos</a></div> 
+                    </div>
             </div>
         </div>
     </div>
@@ -153,7 +154,9 @@
                         <strong>Ramen</strong></h3>
                     <p class="mbr-text mbr-fonts-style display-7">
                         Use Mobirise website building software to create multiple sites for commercial and non-profit projects. Click on the image in this block to replace it. You can add a description below your image, or on the side. If you want to hide some of the text fields, open the Block parameters, and uncheck relevant options.</p>
-                </div>
+                        <div class="mbr-section-btn item-footer mt-2"><a href="pedido.html#top" class="btn btn-primary item-btn display-7">Ver Más Productos</a></div>  
+
+                    </div>
             </div>
             <div class="col-12 col-lg-6">
                 <div class="image-wrapper">
