--- a/pedido.html
+++ b/pedido.html
@@ -90,7 +90,7 @@
                                 <p class="mbr-text mbr-fonts-style mt-3 display-7">Mobirise Page Maker is a free and simple
                                     website builder - just drop site blocks to your page, add content and style it!</p>
                             </div>
-                            <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-primary-outline display-7" target="_blank">Read More &gt;</a></div>
+                            <div class="mbr-section-btn item-footer mt-2"><a href="pedido.html#form4-r" class="btn item-btn btn-black display-7" target="_blank"><span class="mobi-mbri mobi-mbri-shopping-cart mbr-iconfont mbr-iconfont-btn"></span>$500</a></div>
                         </div>
                     </div>
                     <div class="embla__slide slider-image item" style="margin-left: 1rem; margin-right: 1rem;">
@@ -107,7 +107,7 @@
                                     collection of 3500+ site blocks, templates and themes with thousands flexible options. <br>
                                 </p>
                             </div>
-                            <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-primary-outline display-7" target="_blank">Read More &gt;</a></div>
+                            <div class="mbr-section-btn item-footer mt-2"><a href="pedido.html#form4-r" class="btn item-btn btn-black display-7" target="_blank"><span class="mobi-mbri mobi-mbri-shopping-cart mbr-iconfont mbr-iconfont-btn"></span>$400</a></div>
                         </div>
                     </div>
                     <div class="embla__slide slider-image item" style="margin-left: 1rem; margin-right: 1rem;">
@@ -123,7 +123,7 @@
                                 <p class="mbr-text mbr-fonts-style mt-3 display-7">Mobirise Page Maker is a free and simple
                                     website builder - just drop site blocks to your page, add content and style it!</p>
                             </div>
-                            <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-primary-outline display-7" target="_blank">Read More &gt;</a></div>
+                            <div class="mbr-section-btn item-footer mt-2"><a href="pedido.html#form4-r" class="btn item-btn btn-black display-7" target="_blank"><span class="mobi-mbri mobi-mbri-shopping-cart mbr-iconfont mbr-iconfont-btn"></span>$300</a></div>
                         </div>
                     </div>
                     <div class="embla__slide slider-image item" style="margin-left: 1rem; margin-right: 1rem;">
@@ -135,11 +135,11 @@
                             </div>
                             <div class="item-content">
                                 <h5 class="item-title mbr-fonts-style display-4"></h5>
-                                <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><strong>Yakisoba</strong></h6>
+                                <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><strong>Gyosa</strong></h6>
                                 <p class="mbr-text mbr-fonts-style mt-3 display-7">Mobirise Page Maker is a free and simple
                                     website builder - just drop site blocks to your page, add content and style it!</p>
                             </div>
-                            <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-primary-outline display-7" target="_blank">Read More &gt;</a></div>
+                            <div class="mbr-section-btn item-footer mt-2"><a href="pedido.html#form4-r" class="btn item-btn btn-black display-7" target="_blank"><span class="mobi-mbri mobi-mbri-shopping-cart mbr-iconfont mbr-iconfont-btn"></span>$500</a></div>
                         </div>
                     </div><div class="embla__slide slider-image item" style="margin-left: 1rem; margin-right: 1rem;">
                         <div class="slide-content">
@@ -150,11 +150,11 @@
                             </div>
                             <div class="item-content">
                                 <h5 class="item-title mbr-fonts-style display-4"></h5>
-                                <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><strong>Chawamushi</strong></h6>
+                                <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><strong>Yakisoba</strong></h6>
                                 <p class="mbr-text mbr-fonts-style mt-3 display-7">Mobirise Page Maker is a free and simple
                                     website builder - just drop site blocks to your page, add content and style it!</p>
                             </div>
-                            <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-primary-outline display-7" target="_blank">Read More &gt;</a></div>
+                            <div class="mbr-section-btn item-footer mt-2"><a href="pedido.html#form4-r" class="btn item-btn btn-black display-7" target="_blank"><span class="mobi-mbri mobi-mbri-shopping-cart mbr-iconfont mbr-iconfont-btn"></span>$400</a></div>
                         </div>
                     </div><div class="embla__slide slider-image item" style="margin-left: 1rem; margin-right: 1rem;">
                         <div class="slide-content">
@@ -165,11 +165,11 @@
                             </div>
                             <div class="item-content">
                                 <h5 class="item-title mbr-fonts-style display-4"></h5>
-                                <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><strong>Gyudon</strong></h6>
+                                <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><strong>Chawamushi</strong></h6>
                                 <p class="mbr-text mbr-fonts-style mt-3 display-7">Mobirise Page Maker is a free and simple
                                     website builder - just drop site blocks to your page, add content and style it!</p>
                             </div>
-                            <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-primary-outline display-7" target="_blank">Read More &gt;</a></div>
+                            <div class="mbr-section-btn item-footer mt-2"><a href="pedido.html#form4-r" class="btn item-btn btn-black display-7" target="_blank"><span class="mobi-mbri mobi-mbri-shopping-cart mbr-iconfont mbr-iconfont-btn"></span>$400</a></div>
                         </div>
                     </div><div class="embla__slide slider-image item" style="margin-left: 1rem; margin-right: 1rem;">
                         <div class="slide-content">
@@ -180,11 +180,11 @@
                             </div>
                             <div class="item-content">
                                 <h5 class="item-title mbr-fonts-style display-4"></h5>
-                                <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><strong>Okonomiyaki</strong></h6>
+                                <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><strong>Gyudon</strong></h6>
                                 <p class="mbr-text mbr-fonts-style mt-3 display-7">Mobirise Page Maker is a free and simple
                                     website builder - just drop site blocks to your page, add content and style it!</p>
                             </div>
-                            <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-primary-outline display-7" target="_blank">Read More &gt;</a></div>
+                            <div class="mbr-section-btn item-footer mt-2"><a href="pedido.html#form4-r" class="btn item-btn btn-black display-7" target="_blank"><span class="mobi-mbri mobi-mbri-shopping-cart mbr-iconfont mbr-iconfont-btn"></span>$600</a></div>
                         </div>
                     </div><div class="embla__slide slider-image item" style="margin-left: 1rem; margin-right: 1rem;">
                         <div class="slide-content">
@@ -195,11 +195,11 @@
                             </div>
                             <div class="item-content">
                                 <h5 class="item-title mbr-fonts-style display-4"></h5>
-                                <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><strong>Boost Your Ranking</strong></h6>
+                                <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><strong>Okonomiyaki</strong></h6>
                                 <p class="mbr-text mbr-fonts-style mt-3 display-7">Mobirise Page Maker is a free and simple
                                     website builder - just drop site blocks to your page, add content and style it!</p>
                             </div>
-                            <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-primary-outline display-7" target="_blank">Read More &gt;</a></div>
+                            <div class="mbr-section-btn item-footer mt-2"><a href="pedido.html#form4-r" class="btn item-btn btn-black display-7" target="_blank"><span class="mobi-mbri mobi-mbri-shopping-cart mbr-iconfont mbr-iconfont-btn"></span>$500</a></div>
                         </div>
                     </div>
                 </div>
@@ -359,9 +359,6 @@
                         </div>
                         <div class="col-lg-12 col-md col-12 form-group mb-3" data-for="name">
                             <textarea name="descripcion" placeholder="Descripcion" class="form-control" id="name-form4-r"></textarea>
-                        </div>
-                        <div class="col-lg-12 col-md col-12 form-group mb-3" data-for="name">
-                            <input type="text" name="direccion" placeholder="Direccion" data-form-field="name" class="form-control" value="" id="name-form4-r">
                         </div>
                         <div class="col-12 col-md-auto mbr-section-btn"><button type="submit" class="btn btn-primary display-4">Realizar el Pedido</button></div>
                     </div>
