--- a/registro.html
+++ b/registro.html
@@ -93,6 +93,9 @@
                         <div data-for="phone" class="col-lg-12 col-md-12 col-sm-12 form-group mb-3">
                             <input type="password" name="pass" placeholder="Contraseña" data-form-field="phone" class="form-control" value="" id="phone-form6-x">
                         </div>
+                        <div class="col-lg-12 col-md col-12 form-group mb-3" data-for="name">
+                            <input type="text" name="direccion" placeholder="Dirección" data-form-field="name" class="form-control" value="" id="name-form4-r">
+                        </div>
                         <div class="col-auto mbr-section-btn align-center"><button type="submit" class="btn btn-primary display-4">Registrar</button></div>
                     </div>
                 </form>
